[package]
name = "rendy-memory"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/omni-viral/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-memory"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's memory manager"

[features]
serde-1 = ["serde"]

[dependencies]
gfx-hal = { git = "https://github.com/gfx-rs/gfx.git", rev = "dea8caac9c09e907eeeb7a1d3d18fdd3e42062cb" }
derivative = "1.0"
failure = "0.1"
log = "0.4"
hibitset = "0.5"
relevant = { version = "0.4", features = ["log", "backtrace"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "0.6"
veclist = "0.1"

[dev-dependencies]
rand = "0.5"
