[package]
name = "rendy-mesh"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
description = "Crate for rendy to create and use meshes with vertex semantic"
readme = "README.md"
edition = "2018"
repository = "https://github.com/omni-viral/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-memory"
keywords = ["graphics", "gfx-hal", "rendy"]

[features]
obj = ["wavefront_obj"]
serde-1 = ["serde", "gfx-hal/serde", "smallvec/serde", "rendy-factory/serde"]

[dependencies]
rendy-command = { version = "0.1.0", path = "../command" }
rendy-memory = { version = "0.1.0", path = "../memory" }
rendy-resource = { version = "0.1.0", path = "../resource" }
rendy-factory = { version = "0.1.0", path = "../factory" }
rendy-util = { version = "0.1.0", path = "../util" }

gfx-hal = "0.1"

failure = "0.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
wavefront_obj = { version = "5.1", optional = true }
smallvec = { version = "0.6" }
